# energy

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/GUI/: ui.py
app/GUI/screens/: __init__.py  datapoint.py  installation.py  settings.py  welcome.py
app/api/: routers.py
app/api/controllers/: auth.py  channel.py  installation.py  measurements.py  meter.py  task.py  user.py
app/api/dependencies/: auth.py  channel.py  installation.py  measurements.py  meter.py  token.py  user.py
app/api/v1/: auth.py  channel.py  installation.py  measurements.py  meter.py  router.py  task.py  user.py
app/core/: error.py  logger.py  security.py  settings.py
app/core/certificates/: star_kieback-peter.net-decrypted.key
app/database/: session.py
app/database/crud/: base_crud.py  channel.py  installation.py  measurement.py  meter.py  user.py
app/database/migrations/: env.py
app/database/models/: base.py  base_model.py  channel.py  installation.py  measurement.py  meter.py  user.py
app/database/schemas/: channel.py  installation.py  meter.py  token.py
app/energy/: helpers.py  provider.py  service.py  tasks.py  worker.py
app/energy/providers/: base_provider.py  energiemissie.py  fudura.py  joulz.py  kenter.py  mock.py  (+1 more)
app/internal/: admin.py  session.py  settings.py
app/schemas/: channel.py  installation.py  measurements.py  token.py  user.py
app/settings/: configuration.py  logger.py  security.py
app/tests/: btest_user.py  config_test.py  test_database.py  test_energyprovider.py  test_user.py
(+5 files in other folders)
